deploy 2026 06